# graphics

./: .gitmodules  README.md
codebase/: random-grid-generator.html
codebase/canvas/triangulation/: visible-edges.html
codebase/directx12/dojo/: dojo.sln  dojo.vcxproj
codebase/doslike/html/: graphics.html
codebase/doslike/sources/: graphics.c
codebase/sdl3/chatgpt/01. sdl3_gpu_tetrahedron_example/: CMakeLists.txt  README.md
codebase/sdl3/chatgpt/01. sdl3_gpu_tetrahedron_example/src/: main.cpp
codebase/three.js/threejs_mls_mpm_pages/: fluid_mls_mpm.html  intro_mls_mpm.html  intro_mls_mpm_gpu_threejs.html  neohookean_mls_mpm.html
codebase/triangulation/: segments-intersect.html
codebase/triangulation/trials/: common.js  triangulation05.html  triangulation06.html  triangulation07.html  triangulation08.html  triangulation09.html  triangulation10.html
codebase/webgpu/samples/: 01-helloTriangle.html  02-helloTriangleMSAA.html  03-resizeCanvas.html  04-rotatingCube.html  05-twoCubes.html  06-texturedCube.html  07-instancedCube.html  08-fractalCube.html  09-cubemap.html  10-computeBoids.html  11-animometer.html  12-videoUploading.html  13-videoUploadingWebCodecs.html  14-samplerParameters.html  15-imageBlur.html  16-shadowMapping.html  17-reversedZ.html  18-deferredRendering.html  19-particles.html  20-cornell.html  (+21 more)
museum/: index.html
museum/blindsfolding/: BufferGeometry.html  index.html  split01.html
museum/geodesic/: index.html  util.js
museum/perfect-fret/: index.html
museum/tiny-raytracer/: index.html  style.css
sites/signature/: index.html
(+259 files in other folders)
